--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
-    <script src="./walker.js" type="text/javascript"></script>
+    <script src="./walker-class.js" type="text/javascript"></script>
   </body>
 </html>
