--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
-
 <!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Random Walk (attempt)</title>
+    <title>Nature of Code</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link href="./styles/contents.css" rel="stylesheet" />
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
-    <script src="./walker-class.js" type="text/javascript"></script>
+    <main>
+      <div id="CenterList">
+        <div id="TOC">
+          <h1>Nature of Code</h1>
+          <a href="./wally-and-wilbur/">Wally and Wilbur</a>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
+
