set a responsive width

--- a/public/wally-and-wilbur/index.html
+++ b/public/wally-and-wilbur/index.html
@@ -5,7 +5,7 @@
     <title>Wally and Wallace</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
-  <body>
+  <body style="background: black">
     <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
     <script src="./walker-class.js" type="text/javascript"></script>
   </body>
