Add some styling and Gohu font

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       <div id="CenterList">
         <div id="TOC">
           <h1>Nature of Code</h1>
+          <small id="TitleSub">Simulating Natural Systems</small>
           <a href="./wally-and-wilbur/">Wally and Wilbur</a>
         </div>
       </div>
