Added a new project [WIP] and rearranged directory/paths setup and server launch script

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <h1>Nature of Code</h1>
           <small id="TitleSub">Simulating Natural Systems</small>
           <a href="./wally-and-wilbur/">Wally and Wilbur</a>
+          <a href="./feeding-frenzy/">Feeding Frenzy</a>
         </div>
       </div>
     </main>
